[package]
name = "astrinxit"
version = "0.1.0"
authors = ["astrinxit66 <faly.jetcom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1"
serdeconv = "0.3"
log = { version = "0.4", features = ["std", "serde"] }
rustls = "0.17"