[package]
name = "astrinxit"
version = "0.1.0"
authors = ["astrinxit66 <faly.jetcom@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std", "serde"] }
serde = { version = "1", features = ["derive"] }
async-std = "1"
bytes = "0.5"

crossbeam-channel = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serdeconv = "0.3"
rustls = "0.17"
